[package]
name = "crawl"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
description = "A reimplementation of Dungeon Crawl: Stone Soup written in Rust"
repository = "https://github.com/utilforever/crawl-rs"
readme = "README.md"
keywords = [ "dungeon crawl", "game" ]
license = "GPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
